[project]
name = "adv-mla-lab-1"
version = "0.1.0"
description = ""
authors = [
    {name = "larryuts",email = "larryaugusto.iglesiasdesouza@student.uts.edu.au"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (==2.2.2)",
    "jupyterlab (==4.4.4)",
    "scikit-learn (==1.5.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
